# ludomath

./: Cargo.toml  README.md
src/: consts.rs  lib.rs  num.rs  rng.rs  tests.rs  vec2d.rs
