[package]
name = "ludomath"
version = "1.1.0"
authors = ["CookieShade <CookieShade@users.noreply.github.com>"]
description = "A math library for 2D games and graphics"
documentation = "https://docs.rs/ludomath"
repository = "https://github.com/CookieShade/ludomath"
readme = "README.md"
keywords = ["game", "graphics", "vector", "math", "random"]
license = "Apache-2.0"

[dependencies]
rand = "0.3"
